[gd_scene load_steps=5 format=3 uid="uid://dictko6ob1jwp"]

[ext_resource type="Script" path="res://ui/PauseMenu/pause_menu.gd" id="1_d2108"]
[ext_resource type="Theme" uid="uid://cw45l3bp8f0il" path="res://ui/Themes/my_theme.tres" id="1_su71u"]
[ext_resource type="Shader" path="res://ui/PauseMenu/blur.gdshader" id="2_eq8l5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b3xd4"]
shader = ExtResource("2_eq8l5")
shader_parameter/lod = 1.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_d2108")

[node name="Control" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_b3xd4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -195.0
offset_right = 167.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_su71u")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="PausedLabel" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_su71u")
theme_type_variation = &"HugeLabel"
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_su71u")
theme_type_variation = &"HugeButton"
text = "Resume"

[node name="ExitButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_su71u")
theme_type_variation = &"HugeButton"
text = "Exit"

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_unpause"]
